2010-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Add configure support to test for presence of
	  'armadillo' header and working 'libarmadillo' library; and
	  a test for version 0.7.0 or higher (for Cube() type)
	* src/Makevars.in: Setup to be filled-in from configure
	* src/RcppArmadilloDefines.h.in: Idem
	* cleanup: Added to remove configure-generated files

	* R/flags.R: Small cleanups

	* src/RcppArmadillo.h: Use the #define ARMA_HAS_CUBE from the
	  autogenerated header, reindent using Emacs' defaults

2010-02-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Restrict to 'OS_type: unix' for now,
	  set Date: as an SVN property

2010-02-19  Romain Francois <romain@r-enthusiasts.com>

	* added support for field<T> where T is wrappable

2010-02-17  Romain Francois <romain@r-enthusiasts.com>

	* added support for as<Mat<T>> as<Row<T>> and as<Col<T>>
	with T in : int, double, float, unsigned int

	* added untested support for wrap( Cube<T> )

2010-02-16  Dirk Eddelbuettel  <edd@debian.org>

	* Initial package structure based on first proof-of-concept

2010-02-16  Romain Francois <romain@r-enthusiasts.com>

	* initial version, covering wrap(Mat), wrap(Col), wrap(Row)